# Shadesign

./: Cargo.toml  readme.md
shadesign/: lib.rs  main.rs  score.rs  utils.rs
shadesign/commands/: crunch.rs  load.rs  mod.rs
shadesign/resources/: _make.py
shadesign/resources/frequency/: _make.py
